# toldbehandling

./: .eslintrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  REUSE.toml  docker-compose.override.macos.template.yml  docker-compose.override.template.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.eslint/: eslint.config.js  package.json
.reuse/: dep5
admin/: .coveragerc  requirements.txt
admin/admin/: apps.py  data.py  exceptions.py  form_mixins.py  forms.py  rest_client.py  spreadsheet.py  urls.py  utils.py  view_mixins.py  views.py
admin/project/: asgi.py  settings.py  urls.py  wsgi.py
admin/told_twofactor/: apps.py  forms.py  registry.py  tests.py  urls.py  utils.py  views.py
dev-environment/: admin.env  hosts.sh  init-db.sql  logrotate.conf  rest.crontab  rest.env  ui.env
dev-environment/idp/: authsources.php  ports.conf  saml20-sp-remote.php  site.conf
dev-idp/: authsources.php
docker/: Dockerfile  Dockerfile_admin  Dockerfile_er  Dockerfile_rest  Dockerfile_ui  entrypoint.sh  entrypoint_admin.sh  entrypoint_er.sh  entrypoint_rest.sh  entrypoint_ui.sh  nc-forward.sh
mockup/: form.html  form_table.html  list.html
rest/: .coveragerc  mypy.ini  requirements.txt
rest/aktør/: api.py  apps.py  models.py  tests.py  urls.py
rest/anmeldelse/: api.py  apps.py  mixins.py  models.py  tests.py
rest/betaling/: api.py  apps.py  models.py  schemas.py  urls.py  views.py
src/: .coveragerc
tenq/: __init__.py
told-common/: MANIFEST.in  README.md  setup.py
ui/: .coveragerc  manage.py  mypy.ini  requirements.txt
(+377 files in other folders)
