[metadata]
name = tenQ
version = 0.0.3
author = Lars Peter Thomsen
author_email = larsp@magenta.dk
description = 10Q format writer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magenta-aps/10Q
project_urls =
    Bug Tracker = https://github.com/magenta-aps/10Q/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pysftp==0.2.9

[options.packages.find]
where = src
